[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-cli"
version = "0.1.0"
description = "простой тайм-трекер с визуализацией в терминале"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "egor lunev" }
]
keywords = ["time-tracker", "cli", "productivity", "rich"]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
]

[project.scripts]
chronos = "chronos.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronos*"]